--- a/QuizMasterV2/app/src/main/res/values/strings.xml
+++ b/QuizMasterV2/app/src/main/res/values/strings.xml
@@ -20,8 +20,8 @@
     <string name="Count_bt">+</string>
     <string name="toast_bt">-</string>
     <string name="random_bt">Jugar!</string>
-    <string name="here_is_a_random_number_between_0_and_d">Here is a random number between 0 and %d.</string>
+    <string name="here_is_a_random_number_between_0_and_d">Numero de preguntes %d</string>
     <string name="r">R</string>
-    <string name="rletra">R</string>
+    <string name="here_is_the_name_s">Here is the name: %s</string>
     <string name="textoCentro0">0</string>
 </resources>
