--- a/QuizMasterV2/app/src/main/res/values/strings.xml
+++ b/QuizMasterV2/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="first_fragment_label">QuizMaster</string>
     <string name="second_fragment_label">QuizMaster</string>
     <string name="next">Next</string>
-    <string name="previous">Next</string>
+    <string name="previous">NEXT</string>
 
     <string name="lorem_ipsum">
 
